--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="button" class="btn" value="Previous style" id="prev">
         <input type="button" class="btn" value="Reset style" id="reset">
     </div>
-    <script defer src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
